src/assets/styles/style.scss
//VARIABLES
:root {
	--background: hsl(0, 0%, 98%);
	--elements: hsl(0, 0%, 100%);
	--primary-text: hsl(200, 15%, 8%);
	--secondary-text: hsl(0, 0%, 52%);
	--elements-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.1);
	--primary-font: "Nunito sans", sans-serif;
	--filter-max-width: 15rem;
}

:root.dark-theme {
	--background: hsl(207, 26%, 17%);
	--elements: hsl(209, 23%, 22%);
	--primary-text: hsl(0, 0%, 100%);
}

//SASS MIXINS
@mixin element-container-style() {
	border-radius: 5px;
	box-shadow: var(--elements-shadow);
	background-color: var(--elements);
}

@mixin icon-style(
	$position,
	$margin-direction,
	$margin-value,
	$font-size,
	$color: inherit
) {
	position: $position;
	#{$margin-direction}: $margin-value;
	font-size: $font-size;
	color: $color;
}

//RESETTING SOME CSS STYLES
* {
	box-sizing: border-box;
}

body {
	margin: 0;
	font-family: var(--primary-font);
	background-color: var(--background);
	color: var(--primary-text);
}

ul {
	margin: 0;
	padding: 0;
}

img,
picture > source {
	display: block;
	max-width: 100%;
	height: auto;
}

dd {
	margin: 0;
}

//STYLING
.header {
	margin-bottom: 25px;
	padding: 1rem 5%;
	background-color: var(--elements);
	box-shadow: var(--elements-shadow);
	display: flex;
	justify-content: space-between;
	& h1 {
		font-size: 1.25rem;
		font-weight: 800;
		//inheriting color from body
	}

	&__btn {
		position: relative;
		border: none;
		background-color: transparent;
		font-family: var(--primary-font);
		font-size: 0.9rem;
		font-weight: 600;
		cursor: pointer;
		color: var(--primary-text);
		outline: none;

		&:focus {
			box-shadow: 0 0 0 2px var(--secondary-text);
		}
		&__icon {
			@include icon-style(relative, margin-right, 0.25rem, 1rem);
			top: 2px;
		}
	}
}

.search-box {
	width: 90%;
	padding: 1rem 5%;
	margin: 0 auto 50px;
	@include element-container-style();
	display: flex;
	align-items: center;

	&:focus-within {
		box-shadow: 0 0 0 2px var(--secondary-text);
	}

	&__icon {
		@include icon-style(relative, margin-right, 0.5rem, 1.5rem, var(--secondary-text));
		top: -2px;
	}

	&__input {
		width: 85%;
		border: none;
		outline: none;
		font-size: 0.8rem;
		color: var(--secondary-text);
		letter-spacing: 0.25px;
	}
}

.filter {
	margin-bottom: 40px;
	margin-left: 5%;
	max-width: var(--filter-max-width);

	&__dropdown {
		width: 100%;
		padding: 1rem 15%;
		border: none;
		outline: none;
		font-family: var(--primary-font);
		font-size: 0.9rem;
		font-weight: 600;
		text-align: left;
		cursor: pointer;
		position: relative;
		@include element-container-style();
		&__icon {
			@include icon-style(absolute, margin-right, 0, 1.7rem);
			top: 12.5px;
			right: 8%;
		}

		&__box {
			display: none;
			width: 100%;
			max-width: var(--filter-max-width);
			padding: 1rem 0;
			border: none;
			position: absolute;
			z-index: 2;
			@include element-container-style();

			&--active {
				display: block !important;
			}

			&__option {
				padding: 0.25rem 15%;
				font-size: 0.9rem;
				font-weight: 600;
				list-style-type: none;
				cursor: pointer;

				&:hover {
					background-color: var(--background);
				}
			}
		}
	}
}

.card-grid {
	width: 80%;
	margin: 0 auto;
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(295px, 1fr));
	column-gap: 10px;
}

.card {
	max-width: 295px;
	margin-bottom: 40px;
	@include element-container-style();
	overflow: hidden;

	&__body {
		&__text {
			width: 90%;
			margin: 40px auto;

			& h2 {
				font-size: 1.25rem;
			}

			& .desc-list {
				font-size: 0.9rem;

				&__item {
					display: flex;
					justify-content: start;

					&__term {
						margin-right: 0.25rem;
						margin-bottom: 5px;
						font-weight: 600;
					}
				}
			}
		}
	}
}

.Toastify__toast--error {
	font-family: var(--primary-font);
	color: red;
	@include element-container-style();
}

//LOADER (shout out to Temani Afif for creating this loader. https://dev.to/afif/i-made-100-css-loaders-for-your-next-project-4eje)
.shapes-1 {
	width: 80px;
	height: 80px;
	margin: 25px auto 0;
	border-radius: 50%;
	background: #f03355;
	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
	animation: sh1 2s infinite cubic-bezier(0.3, 1, 0, 1);
}
@keyframes sh1 {
	33% {
		border-radius: 0;
		background: #514b82;
		clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
	}
	66% {
		border-radius: 0;
		background: #ffa516;
		clip-path: polygon(50% 0, 50% 0, 100% 100%, 0 100%);
	}
}

